--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,12 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>永远怀念</title>
-    <meta name="description" content="An online homepage for memorial of Mrs. Shengrong Zhang (1943.12.4 - 2020.2.13)">
+    <title>永远怀念 - 张慎蓉</title>
+    <meta name="description" content="An online homepage for memorial of Mrs. Shenrong Zhang (1943.12.4 - 2020.2.13)">
     <meta name="keywords" content="Forever Memorial">
     <meta name="author" content="Original Zhu Hao, Follow Up Zinuo You">
 
-    <link rel="icon" href="http://www.zhuhao.me/static/cmu_logo.png">
+    <!--link rel="icon" href="http://www.zhuhao.me/static/cmu_logo.png" -->
 
     <link rel="stylesheet" href="./scripts/bootstrap.min.css">
     <link rel="stylesheet" href="./scripts/font.css">
@@ -18,80 +18,30 @@
 
   <body>
   <div class="container" align="justify">
-    <h2>Hao Zhu</h2>
-    <img src="./scripts/portrait.jpg" class="portrait">
-    <p>I am a first-year doctoral student at
-    <a href="https://lti.cs.cmu.edu/">Language Technologies Institute</a>,
-    <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.
-    I am fortunately advised by
-    <a href="http://www.phontron.com/">Graham Neubig</a> and <a href="https://yonatanbisk.com/">Yonatan Bisk</a>.
-
-    Before joining CMU, I enjoyed four fantasic undergrad years at Tsinghua University, advised by
-    <a href="http://nlp.csai.tsinghua.edu.cn/~lzy/" target="_blank">Zhiyuan Liu</a>.
-    I also worked closely with <a href="http://www.cs.jhu.edu/~jason/Argo">Jason Eisner</a> and <a href="http://www.cs.cmu.edu/~mgormley/" target="_blank">Matt Gormley</a>.
-    You can find my cv <a href="http://www.zhuhao.me/static/cv.pdf">here</a> (2019/3).
-
-
-    </p><p>My ultimate goal is to understand <a href="https://www.britannica.com/science/human-intelligence-psychology" target="_blank">human intelligence</a>. Believing in <a href="http://www.richardfeynman.com/" target="_blank">Feynman</a>'s famous quote, "<i>What I cannot create, I do not understand.</i>", I am working on teaching Machine Learning models to gain human intelligence.
-      More specifically, I am currently interested in teaching machines to speak human language, as well as to do human-level logical reasoning. I also have broad interests in other cognitive science fields.
+    <h2>张慎蓉</h2>
+    <img src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/IMG_6574.jpeg" class="portrait">
+    <!-- 纪念网页简介 -->
+    <p></p>
+    <p>
+      &nbsp&nbsp&nbsp&nbsp 各位家人、朋友，大家好。2020年2月13日上午9时，我的奶奶张慎蓉永远地闭上了双眼，病逝于四川省成都市中西医结合医院。
+      我悲痛于她身体的逝去，但是也意识到她的精神永存，正如一部电影所说“一个人只有被所有人忘记才是真正的死亡”，我相信所有关心奶奶的人们都会用独一无二的记忆让奶奶继续活在这个她热爱的世界。
+      在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
     </p>
-
-    <p><b>Email:</b> zhuhao [at] cmu.edu</p>
-    <p><b>Twitter:</b> <a href="https://twitter.com/_Hao_Zhu">@_Hao_Zhu</a></p>
-    <p><b>GitHub:</b> <a href="https://github.com/ProKil">ProKil</a></p>
+    <p align='right'> 游子诺 <br> 于2020年1月13日</p>
+    <p> (若您希望能够在这个平台上发表内容，请联系逝者的家人或邮件<a href="youzn99@qq.com">youzn99@qq.com</a>)</p>
 
     <p>
-    <!-- <a href="static/cv_Hao_Zhu.pdf" target="_blank">[Curriculum Vit&aelig;]</a> -->
-    <a href="http://www.zhuhao.me/calendar.html" target="_blank">[Calendar]</a><a href="https://doodle.com/zhuhao" target="_blank">[Meet Me!]</a></p>
+
+    <!-- 人物生平 -->
+    <hr>
+
+    <h4>人物生平</h4>
+    <p>&nbsp&nbsp&nbsp&nbsp 张慎蓉，1943年12月4日出生于XXX，父亲是一位，母亲是一位……</p>
 
     <hr>
 
-    <p>
-    <a href="http://www.zhuhao.me/publication.html">[Full Publication List &amp; Preprints]</a>&nbsp;&nbsp;
-    <a href="https://scholar.google.com/citations?user=-3yFcsMAAAAJ&amp;hl=en" target="_blank">[Google Scholar]</a>
-    </p>
-
-    <hr>
-
-    <h4>News</h4>
-    <p>
-      [May. 2019] Got two papers accepted at ACL 2019. See you at Firenze.
-    </p>
-    <p>
-      [Feb. 2019] Got one paper accepted at NAACL 2019 in machine learning area.
-    </p>
-    <p>
-      [Oct. 2018] We proudly released our <a href="http://zhuhao.me/fewrel">FewRel</a> dataset. Consider submitting your models!
-    </p>
-    <p>
-      [Aug. 2018] Got four papers accepted at EMNLP 2018 in IE and semantics areas. You can now read the abstracts of these papers. Stay tuned for our preprints, codes and datasets! See you in Brussels!
-    </p>
-    <p>
-      [Jun. 2018] Released camera-ready version of our ACL paper and its code.
-    </p>
-    <p>
-      [Apr. 2018] Our paper "Incorporating Chinese Characters of Words for Lexical Sememe Prediction" have been accepted to <a href="http://acl2018.org/">ACL 2018</a>! My co-authors, <a href="http://oncebasun.me/">Huiming</a>, <a href="http://nlp.csai.tsinghua.edu.cn/~xrb/">Ruobing</a> and Prof. <a href="http://nlp.csai.tsinghua.edu.cn/~lzy/" target="_blank">Zhiyuan Liu</a>, are really fantasic! See you in <a href="http://www.visitmelbourne.com/">Melbourne</a>!
-    </p>
-    <p>
-      [Apr. 2018] I have become the fellow of Tsinghua University Initiative Scientific Research Program with a funding of 32, 000 USD!
-    </p>
-    <p>
-      [Apr. 2018] This summer and fall I will fortunately do research with Prof. <a href="http://www.cs.cmu.edu/~mgormley/" target="_blank">Matt Gormley</a> at CMU and Prof. <a href="http://www.cs.jhu.edu/~jason/">Jason Eisner</a> at JHU. See you there!
-    </p>
-
-    <hr>
-
-    <h4>Service</h4>
-    <p>
-      Reviewer: EMNLP 2018/2019, NAACL 2019, ACL 2019/2020
-    </p>
-    <p>
-      Volunteer/Review Assistant: IJCAI 2017/2018
-    </p>
-
-    <hr>
-
-    <h4>Research Hightlights</h4>
+    <!-- 怀念致辞 -->
+    <h4>怀念致辞</h4>
 
     <div class="gap">
         <br>
@@ -107,24 +57,14 @@
         </p>
     </div>
 
-        <div class="jumbotron">
-        <h5>Incorporating Chinese Characters of Words for Lexical Sememe Prediction</h5>
-        <p>Sememes are minimum semantic units of concepts in human languages, such that each word sense is composed of one or multiple sememes.
-           Words are usually manually annotated with their sememes by linguists and form linguistic common-sense knowledge bases widely used in various NLP tasks.
-           Recently, the lexical sememe prediction task was introduced. It consists of automatically recommending sememes for words, which is expected to improve annotation efficiency and consistency.
-           However, existing methods of lexical sememe prediction typically rely on the external context of words to represent the meaning, which usually fails to deal with low-frequency and out-of-vocabulary words. To address this issue for Chinese, we propose a novel framework to take advantage of both
-             internal character information and external context information of a word.
-        </p>
-        <p>
-        <b>Papers:</b>
-        <br>
-        <a href="https://arxiv.org/abs/1806.06349" target="_blank">Incorporating Chinese Characters of Words for Lexical Sememe Prediction</a> Annual Meeting of the Association for Computational Linguistics (ACL-18).
-        </p>
-    </div>
-
     <hr>
 
-    <p class="copyright">Copyright © Hao Zhu 2015-2018</p>
+    <!-- 影像记录 -->
+    <p align="center">
+    <iframe height="450" width="600" src='http://player.youku.com/embed/XMzUzODk0OTc1Mg==' frameborder=3 'allowfullscreen'></iframe>
+    </p>
+
+    <p class="copyright">Copyright © Zinuo You 2020</p>
 
   </div>
 
