--- a/index.htm
+++ b/index.htm
@@ -77,9 +77,9 @@
     <hr>
 
     <!-- 影像记录 -->
-    <!-- p align="center"-->
-    <iframe height="450" width="600" src='http://player.youku.com/embed/XMzUzODk0OTc1Mg==' frameborder=3 'allowfullscreen'></iframe>
-    <!--/p-->
+    <p align="center">
+    <iframe height="450" width="600" src='https://player.youku.com/embed/XMzUzODk0OTc1Mg==' frameborder=3 'allowfullscreen'></iframe>
+    </p>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
 
