--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,6 @@
       在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
     </p>
     <p align='right'> 游子诺 <br> 于2020年1月13日</p>
-    <p> (若您希望能够在这个平台上发表内容，请联系逝者的家人或邮件<a href="youzn99@qq.com">youzn99@qq.com</a>)</p>
 
     <p>
 
@@ -42,6 +41,7 @@
 
     <!-- 怀念致辞 -->
     <h4>怀念致辞</h4>
+    <p> 若您希望能够在这个平台上发表内容，请点击此处<a href="www.apple.com.cn">链接</a>在留言板上留言</p>
 
     <div class="gap">
         <br>
@@ -61,7 +61,7 @@
 
     <!-- 影像记录 -->
     <p align="center">
-    <iframe height="450" width="600" src='https://player.youku.com/embed/XMzUzODk0OTc1Mg==' frameborder=3 'allowfullscreen'></iframe>
+    <iframe height=498 width=510 src='https://player.youku.com/embed/XNDU0NDY1MDI2NA==' frameborder=0 'allowfullscreen'></iframe>
     </p>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
