--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
 
     <!-- 影像记录 -->
     <p align="center">
-    <iframe height=498 width=510 src='https://player.youku.com/embed/XNDU0NDY1MDI2NA==' frameborder=0 'allowfullscreen'></iframe>
+    <iframe width="80%" src='https://player.youku.com/embed/XNDU0NDY1MDI2NA==' frameborder=0 'allowfullscreen'></iframe>
     </p>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
