--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
       我悲痛于她身体的逝去，但是也意识到她的精神永存，正如一部电影所说“一个人只有被所有人忘记才是真正的死亡”，我相信所有关心奶奶的人们都会用独一无二的记忆让奶奶继续活在这个她热爱的世界。
       在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
     </p>
-    <p align='right'> 游子诺 <br> 于2020年1月13日</p>
+    <p align='right'> 子诺 <br> 于2020年1月13日</p>
 
     <p>
 
@@ -35,7 +35,10 @@
     <hr>
     <h4>人物生平</h4>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A5%B6%E5%A5%B6%E7%AC%91%E8%84%B8%E6%8B%BC%E5%9B%BE.jpg"> </p>
-    <p>&nbsp&nbsp&nbsp&nbsp 张慎蓉，1943年12月4日出生于XXX，父亲是一位，母亲是一位……</p>
+    <p>
+      &nbsp&nbsp&nbsp&nbsp 张慎蓉，女，祖籍自贡云县，1943年12月4日出生于四川省成都市，父亲是一名内科医生，母亲是一名家庭主妇，是家中排第三的女儿。
+      自中学毕业于成都二十九中（现成都十二中）后，于1964年在四川大学幼儿园担任幼儿园老师，工作35年至1999年退休，桃李满天下，春晖遍四方.
+    </p>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A4%A7%E5%AE%B6%E5%BA%AD%E7%85%A7%E7%89%87.jpeg"> </p>
 
     <hr>
@@ -50,13 +53,18 @@
     </div>
 
     <div class="jumbotron">
-        <h5>Iterative Entity Alignment via Joint Knowledge Embeddings</h5>
-        <p>Entity alignment aims to link entities and their counterparts among different knowledge graphs. There are two main challenge in this project: (1) How to find synonymous entity counterparts from different knowledge graphs, (2) How to make full use of entity pairs aligned during training. We proposed to embedding both knowledge graphs into joint embedding space and also proposed an iterative method to make use of newly aligned entity pairs.</p>
+        <h5>子诺</h5>
         <p>
-        <b>Papers:</b>
-        <br>
-        <a href="http://static.ijcai.org/proceedings-2017/0595.pdf" target="_blank">Iterative Entity Alignment via Joint Knowledge Embeddings</a> International Joint Conference of Artificial Intelligence (IJCAI-17).
+          亲爱的奶奶，感谢你在我童年与少年时给予我的照顾与陪伴。你带领我在自然中寻找快乐，走遍在川大荷花池边的每个角落，用桂树自制的钓竿，
+          与我一同感受从池塘提起钓竿的喜悦；你用朴实的手艺带给我温暖，在寒冷与炎热的假期，赶着公交车全副武装地带着食材，日复一日地为我备上碗碗热腾腾的抄手。
+          回望往事稍纵即逝，细数回味却历历在目，与你的故事不胜枚举，感谢你不辞辛劳为我的付出。
         </p>
+        <p>
+          在过去的三年里，我们“行万里路”，北至帝都，南至云南，用脚步走访祖国的山河，我们“读万卷书”，整理厚厚的相册集中回看你人生的故事。
+          离开也许短暂，但离别的路却可以很长，我已满足于与你共同享受的最后时光，我希望你不在留恋，愿你去往一个不再痛苦的世界，与爱你的父母和姐妹重聚，而你也将永远活在我的心里。
+        </p>
+        <p>奶奶走好，愿您安息！</p>
+        <p align="right">—爱您的乐乐</p>
     </div>
 
     <hr>
