--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@
     <iframe width="100%" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=w3066gvlv3t" allowFullScreen="true"></iframe>    </p>
     <p>四川大学幼儿园照片纪实</p>
     <p align="center">
-    <iframe width="100%" src='http://player.youku.com/embed/XNDU0NDg1NTA2MA==' frameborder=0 'allowfullscreen'></iframe>
+    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NDg1NTA2MA==' frameborder=0 'allowfullscreen'></iframe>
     </p>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
