--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,9 @@
     <p>
       &nbsp&nbsp&nbsp&nbsp 各位家人、朋友，大家好。2020年2月13日上午9时，我的奶奶张慎蓉永远地闭上了双眼，病逝于四川省成都市中西医结合医院。
       我悲痛于她身体的逝去，但是也意识到她的精神永存，正如一部电影所说“一个人只有被所有人忘记才是真正的死亡”，我相信所有关心奶奶的人们都会用独一无二的记忆让奶奶继续活在这个她热爱的世界。
-      在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
+    </p>
+    <p>
+      &nbsp&nbsp&nbsp&nbsp 在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
     </p>
     <p align='right'> 子诺 <br> 于2020年1月13日</p>
 
