--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>永远怀念 - 张慎蓉</title>
+    <title>永远怀念 - 张慎蓉(1943-2020)</title>
     <meta name="description" content="An online homepage for memorial of Mrs. Shenrong Zhang (1943.12.4 - 2020.2.13)">
     <meta name="keywords" content="Forever Memorial">
     <meta name="author" content="Original Zhu Hao, Follow Up Zinuo You">
@@ -18,18 +18,18 @@
 
   <body>
   <div class="container" align="justify">
-    <h2>张慎蓉</h2>
+    <h2>永远怀念 - 张慎蓉(1943-2020)</h2>
     <img src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%B0%81%E9%9D%A2.jpeg" class="portrait">
     <!-- 纪念网页简介 -->
     <p></p>
     <p>
       &nbsp&nbsp&nbsp&nbsp 各位家人、朋友，大家好。2020年2月13日上午9时，我的奶奶张慎蓉永远地闭上了双眼，病逝于四川省成都市中西医结合医院。
-      我悲痛于她身体的逝去，但是也意识到她的精神永存，正如一部电影所说“一个人只有被所有人忘记才是真正的死亡”，我相信所有关心奶奶的人们都会用独一无二的记忆让奶奶继续活在这个她热爱的世界。
+      我悲痛于她身体的逝去，但也意识到她的精神永存，正如一部电影所说“一个人只有被所有人忘记，才是真正的死亡”，我相信所有关心奶奶的人们都会用独一无二的记忆让奶奶继续活在这个她热爱的世界。
     </p>
     <p>
-      &nbsp&nbsp&nbsp&nbsp 在这里，我设立了一个永久怀念她的在线网页，从我和家人的角度怀念奶奶，我也希望关爱奶奶的人们能够加入这场在线怀念，用你们的回忆让奶奶更鲜活地活在我们每个人心里。
+      &nbsp&nbsp&nbsp&nbsp 在这里，我设立了一个在线纪念网页，你们可以来这里看看她，和她呆一会，回想曾经一起经历的过往，回想曾经感受的欢乐哀愁，用你们的回忆让她更鲜活的活在这个世界，活在我们心里。
     </p>
-    <p align='right'> 子诺 <br> 于2020年1月13日</p>
+    <p align='right'> 子诺 <br> 于2020年1月13日 <br> <br></p>
 
     <p>
 
@@ -38,16 +38,28 @@
     <h4>人物生平</h4>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A5%B6%E5%A5%B6%E7%AC%91%E8%84%B8%E6%8B%BC%E5%9B%BE.jpg"> </p>
     <p>
-      &nbsp&nbsp&nbsp&nbsp 张慎蓉，女，祖籍自贡云县，1943年12月4日出生于四川省成都市，父亲是一名内科医生，母亲是一名家庭主妇，是家中排第三的女儿。
-      自中学毕业于成都二十九中（现成都十二中）后，于1964年在四川大学幼儿园担任幼儿园老师，工作35年至1999年退休，桃李满天下，春晖遍四方.
+      &nbsp&nbsp&nbsp&nbsp  张慎蓉，女，祖籍自贡荣县，1943年12月4日出生于四川省成都市，父亲是一名内科医生，母亲是一名家庭主妇，家中排行第四。
+      中学毕业于成都二十九中（现成都十二中），1964年在四川大学幼儿园担任幼儿园老师，工作35年至1999年退休，桃李满天下，春晖遍四方.
     </p>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A4%A7%E5%AE%B6%E5%BA%AD%E7%85%A7%E7%89%87.jpeg"> </p>
 
     <hr>
 
+    <!-- 影像记录 -->
+    <h4>影像记录</h4>
+    <p>怀念短片</p>
+    <p align="center">
+    <iframe width="100%" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=w3066gvlv3t" allowFullScreen="true"></iframe>    </p>
+    <p>四川大学幼儿园照片纪实</p>
+    <p align="center">
+    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NDg1NTA2MA==' frameborder=0 'allowfullscreen'></iframe>
+    </p>
+
+    <hr>
+
     <!-- 怀念致辞 -->
     <h4>怀念致辞</h4>
-    <p> 若您希望能够在这个平台上发表内容，请点击此处<a href="www.apple.com.cn">链接</a>在留言板上留言。</p>
+    <p> 若您有什么话想对张慎蓉和她的家人说，或是希望分享她的故事，请点击此处<a href="https://wj.qq.com/s2/5430898/05a4" target="_blank">链接</a>在留言板上留言。</p>
     <!-- p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A5%B6%E5%A5%B6%E7%AC%91%E8%84%B8%E6%8B%BC%E5%9B%BE.jpg"></p -->
 
     <div class="gap">
@@ -63,23 +75,18 @@
         </p>
         <p>
           在过去的三年里，我们“行万里路”，北至帝都，南至云南，用脚步走访祖国的山河，我们“读万卷书”，整理厚厚的相册集中回看你人生的故事。
-          离开也许短暂，但离别的路却可以很长，我已满足于与你共同享受的最后时光，我希望你不在留恋，愿你去往一个不再痛苦的世界，与爱你的父母和姐妹重聚，而你也将永远活在我的心里。
+          命运注定必然的别离，但也仁慈地留下告别的时光，愿你安心地离开吧，去往一个不再痛苦的世界，与爱你的父母和姐妹重聚，而你也将永远活在我的心里。
         </p>
-        <p>奶奶走好，愿您安息！</p>
-        <p align="right">—爱您的乐乐</p>
+        <p>奶奶走好，愿你安息！</p>
+        <p align="right">—爱你的乐乐</p>
     </div>
 
-    <hr>
-
-    <!-- 影像记录 -->
-    <h4>影像记录</h4>
-    <p>怀念短片</p>
-    <p align="center">
-    <iframe width="100%" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=w3066gvlv3t" allowFullScreen="true"></iframe>    </p>
-    <p>四川大学幼儿园照片纪实</p>
-    <p align="center">
-    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NDg1NTA2MA==' frameborder=0 'allowfullscreen'></iframe>
-    </p>
+    <div class="jumbotron">
+        <h5>建伟</h5>
+        <p>
+          感谢各位亲人朋友对我母亲的关心与照顾，也感谢幼儿园在母亲患病时给予的关怀与帮助，愿她一路走好。
+        </p>
+    </div>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
 
