--- a/index.htm
+++ b/index.htm
@@ -49,11 +49,10 @@
     <h4>影像记录</h4>
     <p>怀念短片</p>
     <p align="center">
-    <iframe width="100%" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=w3066gvlv3t" allowFullScreen="true"></iframe>    </p>
+    <iframe width=“100%” src='https://player.youku.com/embed/XNDU0NjQyNDA2MA==' frameborder=0 'allowfullscreen'></iframe>
     <p>四川大学幼儿园照片纪实</p>
     <p align="center">
-    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NDg1NTA2MA==' frameborder=0 'allowfullscreen'></iframe>
-    </p>
+    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NjQyOTE4OA==' frameborder=0 'allowfullscreen'></iframe>    </p>
 
     <hr>
 
