--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0021)http://www.zhuhao.me/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -38,7 +37,7 @@
     <h4>人物生平</h4>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A5%B6%E5%A5%B6%E7%AC%91%E8%84%B8%E6%8B%BC%E5%9B%BE.jpg"> </p>
     <p>
-      &nbsp&nbsp&nbsp&nbsp  张慎蓉，女，祖籍自贡荣县，1943年12月4日出生于四川省成都市，父亲是一名内科医生，母亲是一名家庭主妇，家中排行第四。
+      &nbsp&nbsp&nbsp&nbsp  张慎蓉，女，祖籍自贡荣县，1943年12月4日出生于四川省成都市，父亲是一名内科医生，母亲是一名家庭主妇，家中排行第五。
       中学毕业于成都二十九中（现成都十二中），1964年在四川大学幼儿园担任幼儿园老师，工作35年至1999年退休，桃李满天下，春晖遍四方.
     </p>
     <p align="middle"> <img width="80%" src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%A4%A7%E5%AE%B6%E5%BA%AD%E7%85%A7%E7%89%87.jpeg"> </p>
@@ -52,7 +51,8 @@
     <iframe width=“100%” src='https://player.youku.com/embed/XNDU0NjQyNDA2MA==' frameborder=0 'allowfullscreen'></iframe>
     <p>四川大学幼儿园照片纪实</p>
     <p align="center">
-    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NjQyOTE4OA==' frameborder=0 'allowfullscreen'></iframe>    </p>
+    <iframe width="100%" src='https://player.youku.com/embed/XNDU0NjQ2MzA5Mg==' frameborder=0 'allowfullscreen'></iframe>
+    </p>
 
     <hr>
 
@@ -68,13 +68,13 @@
     <div class="jumbotron">
         <h5>子诺</h5>
         <p>
-          亲爱的奶奶，感谢你在我童年与少年时给予我的照顾与陪伴。你带领我在自然中寻找快乐，走遍在川大荷花池边的每个角落，用桂树自制的钓竿，
-          与我一同感受从池塘提起钓竿的喜悦；你用朴实的手艺带给我温暖，在寒冷与炎热的假期，赶着公交车全副武装地带着食材，日复一日地为我备上碗碗热腾腾的抄手。
-          回望往事稍纵即逝，细数回味却历历在目，与你的故事不胜枚举，感谢你不辞辛劳为我的付出。
+          亲爱的奶奶，感谢你在我童年与少年时给予我的照顾与陪伴。你带领我在自然中寻找快乐，走遍在川大荷花池边的每个角落，用树干自制钓竿，
+          与我一同感受从池塘提起钓竿的喜悦；你用朴实的手艺带给我温暖，在寒冷与炎热的假期，带着食材亲手制作，日复一日地为我准备热腾腾的抄手。
+          回望往事稍纵即逝，细数回味却历历在目，与你的故事不胜枚举，感谢你为我而不辞辛劳的付出。
         </p>
         <p>
-          在过去的三年里，我们“行万里路”，北至帝都，南至云南，用脚步走访祖国的山河，我们“读万卷书”，整理厚厚的相册集中回看你人生的故事。
-          命运注定必然的别离，但也仁慈地留下告别的时光，愿你安心地离开吧，去往一个不再痛苦的世界，与爱你的父母和姐妹重聚，而你也将永远活在我的心里。
+          在过去的三年里，我们“行万里路”，北至帝都，南到云南，用脚步走访祖国的山河，我们“读万卷书”，整理厚厚的相册集中回看你人生的故事。
+          命运注定必然的别离，但也仁慈地留下告别的时光，愿你安心地离开吧，去往一个不再病痛的世界，与爱你的父母和姐妹重聚，而你也将永远活在我的心里。
         </p>
         <p>奶奶走好，愿你安息！</p>
         <p align="right">—爱你的乐乐</p>
