--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 
   <body>
   <div class="container" align="justify">
-    <h2>永远怀念 - 张慎蓉(1943-2020)</h2>
+    <h2>永远怀念 <br> 张慎蓉(1943-2020)</h2>
     <img src="https://zhangshengrong.oss-cn-beijing.aliyuncs.com/%E5%B0%81%E9%9D%A2.jpeg" class="portrait">
     <!-- 纪念网页简介 -->
     <p></p>
