--- a/index.htm
+++ b/index.htm
@@ -94,6 +94,7 @@
           愿一辈子勤劳扑实的慎蓉姐一路走好，天堂再也没有病痛，逝者巳去，生者节哀顺便，一切安好，楊昌成敬挽。
         </p>
         <p align="right">—2020.2.16</p>
+    </div>
 
     <p class="copyright">Copyright © Zinuo You 2020</p>
 
